crates/test-ui/ui/msg_send_invalid_error.stderr
error[E0308]: mismatched types
 --> ui/msg_send_invalid_error.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: _] };
  |                          ^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Result<(), Retained<_>>`
  |
  = note: expected unit type `()`
                  found enum `Result<(), Retained<_>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using `Result::expect` to unwrap the `Result<(), Retained<_>>` value, panicking if the value is a `Result::Err`
 --> $WORKSPACE/crates/objc2/src/macros/mod.rs
  |
  |             ($crate::__msg_send_helper.expect("REASON"))
  |                                       +++++++++++++++++

error[E0308]: mismatched types
 --> ui/msg_send_invalid_error.rs
  |
  |     let _: Result<i32, _> = unsafe { msg_send![obj, b: _] };
  |                                      ^^^^^^^^^^^^^^^^^^^^ expected `Result<i32, _>`, found `Result<(), Retained<_>>`
  |
  = note: expected enum `Result<i32, _>`
             found enum `Result<(), Retained<_>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> ui/msg_send_invalid_error.rs
  |
  |     let _: Result<(), i32> = unsafe { msg_send![obj, c: _] };
  |                                       ^^^^^^^^^^^^^^^^^^^^ expected `Result<(), i32>`, found `Result<(), Retained<_>>`
  |
  = note: expected enum `Result<(), i32>`
             found enum `Result<(), Retained<_>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i32: Message` is not satisfied
 --> ui/msg_send_invalid_error.rs
  |
  |     let _: Result<(), Retained<i32>> = unsafe { msg_send![obj, d: _] };
  |                                                 ^^^^^^^^^^^^^^^^^^^^ the trait `Message` is not implemented for `i32`
  |
  = help: the following other types implement trait `Message`:
            AnyObject
            Exception
            NSArray<ObjectType>
            NSConstantString
            NSCountedSet<ObjectType>
            NSDictionary<KeyType, ObjectType>
            NSEnumerator<ObjectType>
            NSError
          and $N others
note: required by a bound in `send_message_error`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send.rs
  |
  |     unsafe fn send_message_error<A, E>(self, sel: Sel, args: A) -> Result<(), Retained<E>>
  |               ------------------ required by a bound in this associated function
...
  |         E: Message,
  |            ^^^^^^^ required by this bound in `MsgSend::send_message_error`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> ui/msg_send_invalid_error.rs
  |
  |     let _: () = unsafe { msg_send![obj, e: obj, f: _] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Result<(), Retained<_>>`
  |
  = note: expected unit type `()`
                  found enum `Result<(), Retained<_>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using `Result::expect` to unwrap the `Result<(), Retained<_>>` value, panicking if the value is a `Result::Err`
 --> $WORKSPACE/crates/objc2/src/macros/mod.rs
  |
  |             ($crate::__msg_send_helper.expect("REASON"))
  |                                       +++++++++++++++++

error[E0308]: mismatched types
 --> ui/msg_send_invalid_error.rs
  |
  |     let _: () = unsafe { msg_send![super(obj), g: _] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Result<(), Retained<_>>`
  |
  = note: expected unit type `()`
                  found enum `Result<(), Retained<_>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using `Result::expect` to unwrap the `Result<(), Retained<_>>` value, panicking if the value is a `Result::Err`
 --> $WORKSPACE/crates/objc2/src/macros/mod.rs
  |
  |             ($crate::__msg_send_helper.expect("REASON"))
  |                                       +++++++++++++++++

error[E0308]: mismatched types
 --> ui/msg_send_invalid_error.rs
  |
  |     let _: () = unsafe { msg_send![super(obj, NSString::class()), h: _] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Result<(), Retained<_>>`
  |
  = note: expected unit type `()`
                  found enum `Result<(), Retained<_>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider using `Result::expect` to unwrap the `Result<(), Retained<_>>` value, panicking if the value is a `Result::Err`
 --> $WORKSPACE/crates/objc2/src/macros/mod.rs
  |
  |             ($crate::__msg_send_helper.expect("REASON"))
  |                                       +++++++++++++++++
